--- a/main.css
+++ b/main.css
@@ -229,7 +229,7 @@ header a {
 
 .ProjectSlide h3 {
     color: white;
-    padding-bottom: 20px;
+    padding-top: 20px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
 }
