--- a/main.css
+++ b/main.css
@@ -30,7 +30,7 @@ header {
 }
 
 header div {
-    margin: 1em 4em 0 4em;
+    margin: .5em 4em 0 4em;
     padding: .5em 1em .5em 1em;
     border-radius: 3px;
 }
@@ -222,6 +222,7 @@ header a {
 }
 
 .ProjectSlide {
+    position: relative;
     width: 800px;
     margin: auto;
     display: none;
@@ -247,7 +248,7 @@ header a {
 .Arrow {
     color: white;
     font-size: 50px;
-    padding: 140px 30px 0 30px;
+    margin: 140px 30px 0 30px;
 }
 
 .Arrow:hover {
@@ -284,6 +285,14 @@ header a {
 #icons p {
     display: inline;
     padding: 20px 10px 20px 10px;
+}
+
+#ConnectBox h3 {
+    color: black;
+    padding-top: 40px;
+    padding-bottom: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 26px;
 }
 
 /** Footer **/
