moved images to folder

--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ figure, figcaption, h1, h2, h3, ul, li, body, div, p, img {
 }
 
 body {
-    background: url("SpartyBW2.jpg") no-repeat fixed center;
+    background: url("images/SpartyBW2.jpg") no-repeat fixed center;
     background-size: 100%;
 }
 
